<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uno"
        android:layout_width="193dp"
        android:layout_height="260dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textos"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toTopOf="@+id/botones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProducto">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/nombre"
                android:fontFamily="@font/ar_one_sans_bold"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/precio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/precio"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/precio"
                android:fontFamily="@font/ar_one_sans_bold"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombre" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/imgProducto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:contentDescription="@string/desc_image_button"
            app:layout_constraintBottom_toTopOf="@+id/textos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/botones"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textos">

            <ImageButton
                android:id="@+id/favorito"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@null"
                android:contentDescription="@string/desc_image_button2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/comprar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_heart" />

            <ImageButton
                android:id="@+id/comprar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@null"
                android:contentDescription="@string/desc_image_button3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/favorito"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_shopping_cart" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
